# axol

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  QUICKSTART.md  README.md  RELEASE_NOTES.md  main.py  pyproject.toml  stream_cameras.sh
.github/workflows/: release-notify.yml
.superset/: config.json
almond_axol/: cli.py  constants.py  shared.py
almond_axol/axol/: __init__.py  axol.py  config.json  config.py
almond_axol/cli/: __init__.py  collect_data.py  config.py  enable_can.py  gravity_comp.py  identify_feedforward.py  identify_friction.py  inference_server.py  install_zed.py  motor_info.py  provision.py  record_proc.py  replay_dataset.py  run_policy.py  serve.py  set_can_id.py  set_zero_pos.py  setup_can.py  stream_zed.py  teleop.py  tracker_bridge.py  tracker_identify.py  tune_pid.py  umi_calibrate.py  umi_session.py
almond_axol/diagnostics/: gripper.py  home.py  telemetry_log.py
almond_axol/kinematics/: __init__.py  axol.urdf  config.py  fk.py  jax_cache.py  solver.py
almond_axol/lerobot/: h264_mux_encoder.py  inference_patch.py  nvenc_encoder.py  rollout.py
almond_axol/motor/: __init__.py  bus.py  damaio.py  damiao.py  driver.py  errors.py  motor.py  myactuator.py  types.py
almond_axol/recording/: __init__.py  record_proc.py
almond_axol/robot/: __init__.py  axol.py  base.py  cart.py  config.py  control.py  gravity.py  lift.py  sim.py  umi.py
almond_axol/script/: setup_can.sh
almond_axol/serve/: __init__.py  app.py  commands.py  introspect.py  manager.py  netdetect.py  orchestrator.py  robot_link.py  runner.py  settings.py  telemetry.py  update.py
almond_axol/teleop/: __init__.py  config.py  core.py  filter.py  teleop.py  worker.py
almond_axol/test/: can.py  dance.py  getvideo.py  gripper.py  home.py  myactuator_x8.py  rom.py  rom_test.py  rom_test_phy.py  teach.py  test_rom.py  testarm.py  view_camera.py  viser_test_rom.py  zed.py
almond_axol/tracker/: __init__.py  base.py  bridge.py  config.py  survive.py  synthetic.py  ultimate.py
almond_axol/utils/: __init__.py  adb.py  affinity.py  certs.py  dotenv.py  gst_webrtc_install.py  jetson.py  jetson_diag.py  ports.py  proc_diag.py  signals.py  sudo.py
almond_axol/video/: __init__.py  gst_zed.py  hw_video.py  shm_frames.py  video.py  video_proc.py
almond_axol/vr/: __init__.py  certs.py  config.py  control_channel.py  gst_webrtc.py  gst_zed.py  hw_video.py  ice.py  interp.py  models.py  server.py  shm_frames.py  video.py  video_proc.py
almond_axol/zed/: __init__.py  config.py  daemon.py  devices.py  snapshot.py  streamer.py  videostream.py
assets/: umi_handle.stl
deploy/turn/: Dockerfile  README.md  entrypoint.sh  fly.toml
docs/: docs.json  hardware.mdx  index.mdx  installation.mdx
docs/api/: concepts.mdx  (+7 more)
scripts/: umi_ik_bench.py
tests/: test_soft_shutdown.py
web/: .gitignore  README.md  package-lock.json  package.json
(+192 files in other folders)
