[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "almond-axol"
version = "0.1.0"
description = "Almond Axol SDK"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.2",
    "jax>=0.9.2",
    "jaxlie>=1.5.0",
    "pydantic>=2.12.5",
    "pyroki",
    "python-can>=4.6.1",
    "scipy>=1.17.1",
    "uvicorn[standard]>=0.42.0",
    "yourdfpy>=0.0.60",
]

[project.optional-dependencies]
cuda = ["jax[cuda13]>=0.9.2"] # CPU is usually faster for the JAX IK solver
dev = ["opencv-python-headless>=4.13.0.92"]
lerobot = ["lerobot"]
sim = ["viser>=1.0.24"]

[tool.uv.sources]
pyroki = { git = "https://github.com/chungmin99/pyroki.git" }
lerobot = { git = "https://github.com/huggingface/lerobot.git" }
[project.scripts]
axol = "almond_axol.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["almond_axol"]
