[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "almond-axol"
version = "0.1.6"
description = "Almond Axol SDK"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiortc>=1.9", # WebRTC transport for headset camera video (pulls av)
    "draccus==0.10.0",
    "fastapi>=0.135.2",
    "jax>=0.9.2",
    "jaxlie>=1.5.0",
    "mujoco>=3.8.0",
    "pydantic>=2.12.5",
    "pyroki",
    "python-can>=4.6.1",
    "scipy>=1.17.1",
    "uvicorn[standard]>=0.42.0",
    "yourdfpy>=0.0.60",
    "opencv-python-headless>=4.13.0.92"
]

[project.optional-dependencies]
lerobot = ["lerobot[dataset,viz,async]"]
sim = ["viser>=1.0.24"]

[tool.uv.sources]
pyroki = { git = "https://github.com/chungmin99/pyroki.git", rev = "388e43e1fc0d0ee382968d3dd72970fd62a0450c" }
lerobot = { git = "https://github.com/huggingface/lerobot.git", rev = "b5f65e533270015f33dc2f5f570b27dada96fbb1" }
[project.scripts]
axol = "almond_axol.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["almond_axol"]
